--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoContrato.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaTipoContrato.xhtml
@@ -502,7 +502,7 @@
                                 <p:ajax event="dblclick" listener="#{controlVigenciasTiposContratos.asignarIndex(indice, '1', '2')}" />
                             </p:inputText>
                             <p:watermark for="duplicarTipoContrato" value="Tipo Contrato" />
-                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 331px; top: 150px; " id="btnDuplcarTipoContrato" process="@this" icon="ui-icon-search" actionListener="#{controlVigenciasTiposContratos.asignarIndex(indice, '1', '2')}"/>
+                            <p:commandButton style="width: 23px; height: 25px; position: absolute; left: 331px; top: 150px; " id="btnDuplicarTipoContrato" process="@this" icon="ui-icon-search" actionListener="#{controlVigenciasTiposContratos.asignarIndex(indice, '1', '2')}"/>
 
                             <strong><h:outputText value="Ciudad: " style="font-size: 12px; position: absolute; top: 188px" /></strong>
                             <p:inputText id="duplicarCiudad" value="#{controlVigenciasTiposContratos.duplicarVTC.ciudad.nombre}" style="font-size: 12px; width: 122px; position: absolute; left: 200px; top: 185px; text-transform: uppercase" onclick="select();">
